# fastapi-lifecycle

./: .gitignore  LICENSE  README.md  example.py  fastapi_lifecycle.py  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yml
fastapi_lifecycle/: __init__.py  decorators.py  dependencies.py  headers.py  middleware.py  route.py  schemas.py  utils.py
