[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-lifecycle"
version = "0.1.0"
description = "HTTP Deprecation, Sunset, and End-of-Support headers for FastAPI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = ["fastapi", "python-dateutil"]
authors = [{name = "Your Name", email = "you@example.com"}]

[project.urls]
Homepage = "https://github.com/Sshahar/fastapi-lifecycle"
